cargo-features = ["profile-rustflags"]

[package]
name = "dspbptk"
keywords = ["dspbptk", "dsp"]
authors = ["bWFuanVzYWth"]
version = "0.1.0"
edition = "2024"
readme = "readme.md"
description = "Dyson Sphere Program Blueprint Toolkit"
repository = "https://github.com/bWFuanVzYWth/dspbptk"
license = "MIT"
default-run = "dspbptk"

[lib]
name = "dspbptk"
path = "src/lib.rs"

[dependencies]
# Multi-threaded
rayon = "1.10.0"
# TODO 更新到nom 8.0
# Parser
nom = "7.1.3"
# decode/encode base64
base64 = "0.22.1"
# md5f
lazy_static = "1.5.0"
# Decompress GZIP
flate2 = "1.1.1"
# Compress GZIP
zopfli = "0.8.2"
# test float equal
approx = "0.5.1"

# Recursive directory traversal
walkdir = "2.5.0"
# Command Line Argument Parser
clap = { version = "4.5.37", features = ["derive"] }
# log
log = "0.4.27"
# log >> stderr
env_logger = "0.11.8"
# test & debug
nalgebra = "0.33.2"
# error
thiserror = "2.0.12"
# DspbptkBuildingData.uuid
uuid = { version = "1.16.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
# enum.iter()
strum = "0.27.1"
strum_macros = "0.27.1"
# alloc
mimalloc = "0.1.46"
petgraph = "0.8.1"
bimap = "0.6.3"

[profile.release]
codegen-units = 1
lto = "fat"
rustflags = [
    "-C",
    "target-cpu=native",
    "-C",
    "link-arg=-fuse-ld=lld",
    "-Z",
    "threads=8",
]
