cargo-features = ["profile-rustflags"]

[package]
name = "dspbptk"
keywords = ["dspbptk", "dsp"]
authors = ["bWFuanVzYWth"]
version = "0.5.0"
edition = "2024"
readme = "readme.md"
description = "Dyson Sphere Program Blueprint Toolkit"
repository = "https://github.com/bWFuanVzYWth/dspbptk"
license = "MIT"
default-run = "dspbptk"
categories = [
    "game-development",
    "command-line-utilities",
    "parsing",
    "algorithms",
]

[lib]
name = "dspbptk"
path = "src/lib.rs"

[dependencies]
# DSP data base
dspdb = { git = "https://github.com/bWFuanVzYWth/dspdb", branch = "master" }

# Multi-threaded
rayon = "1.11.0"
# Parser
nom = { version = "8.0.0", features = ["alloc"] }
# decode/encode base64
base64 = "0.22.1"
# Decompress GZIP
flate2 = "1.1.2"
# Compress GZIP
zopfli = "0.8.2"

# Recursive directory traversal
walkdir = "2.5.0"
# Command Line Argument Parser
clap = { version = "4.5.47", features = ["derive"] }
# log
log = "0.4.28"
# log >> stderr
env_logger = "0.11.8"
# test & debug
nalgebra = "0.33.2"
# error
thiserror = "2.0.16"
# DspbptkBuildingData.uuid
uuid = { version = "1.18.1", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
# enum.iter()
strum = "0.27.2"
strum_macros = "0.27.2"
# alloc
mimalloc = "0.1.48"
# graph
petgraph = "0.8.2"
num_enum = "0.7.4"
enum-map = "2.7.3"

[profile.release]
codegen-units = 1
lto = "fat"
rustflags = [
    "-C",
    "target-cpu=native",
    "-C",
    "link-arg=-fuse-ld=lld",
    "-Z",
    "threads=8",
]
