[package]
name = "dspbptk"
version = "0.1.0"
edition = "2021"

[dependencies]
# Multi-threaded
rayon = "1.10.0"
# Parser
nom = "7.1.3"
# decode/encode base64
base64 = "0.22.1"
# md5f
lazy_static = "1.5.0"
# Decompress GZIP
flate2 = "1.0.35"
# Compress GZIP
zopfli = { path = "../zopfli" }

# Recursive directory traversal
walkdir = "2.5.0"
# Command Line Argument Parser
clap = { version = "4.5.21", features = ["derive"] }
# log
log = "0.4.22"
# log >> stderr
env_logger = "0.11.5"
nalgebra = "0.33.2"

[profile.release]
lto = "fat"
codegen-units = 1
